# ExampleDistccMacos

./: .gitignore  CMakeLists.txt  README.md  generateMake.sh  generateXcode.sh
